# AI-assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  RAG.md  WEB_UI.md  WINDOWS_SETUP.md
src/slot_assistant/: __init__.py
src/slot_assistant/api/: __init__.py  server.py
src/slot_assistant/cli/: __init__.py  main.py
src/slot_assistant/data/: __init__.py
src/slot_assistant/llm/: ollama_client.py
src/slot_assistant/rag/: __init__.py  ast_loader.py  loader.py  store.py
src/slot_assistant/training/: __init__.py
tests/: test_cli.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: chatViewProvider.ts  extension.ts
web-ui/: package-lock.json  package.json  tailwind.config.js
web-ui/src/: App.tsx  index.css  types.ts
web-ui/src/components/: ChatContainer.tsx  CodeBlock.tsx  Header.tsx  InputArea.tsx  MessageBubble.tsx
web-ui/src/services/: api.ts  storage.ts
