[project]
name = "slot-assistant"
version = "0.1.0"
description = "Local LLM AI assistant for slot game framework development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Slot Game Team"}
]

dependencies = [
    # CLI & API
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    
    # LLM Integration
    "litellm>=1.20.0",
    "ollama>=0.1.0",
    
    # RAG Components
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    
    # Data Processing
    "tree-sitter>=0.20.4",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "datasets>=2.16.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
training = [
    "unsloth>=2024.1",
    "transformers>=4.37.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.42.0",
    "trl>=0.7.0",
    "accelerate>=0.26.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
slot-assistant = "slot_assistant.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slot_assistant"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
